force-app/main/default/objects/Node__c/Node__c.object-meta.xml
<CustomObject>
    <label>Node</label>
    <nameField>
        <label>Node Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>