force-app/main/default/objects/Node__c/fields/Appliance_public_key__c.field-meta.xml
<CustomField>
    <fullName>Appliance_public_key__c</fullName>
    <label>Appliance public key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>