force-app/main/default/objects/Node__c/fields/asset__c.field-meta.xml
<CustomField>
    <fullName>asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Nodes</relationshipLabel>
    <relationshipName>Nodes</relationshipName>
    <type>Lookup</type>
</CustomField>