force-app/main/default/objects/Node__c/fields/bios_version__c.field-meta.xml
<CustomField>
    <fullName>bios_version__c</fullName>
    <label>BIOS Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>