force-app/main/default/objects/Node__c/fields/board_serial__c.field-meta.xml
<CustomField>
    <fullName>board_serial__c</fullName>
    <label>Board Serial</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>