force-app/main/default/objects/Node__c/fields/chassis__c.field-meta.xml
<CustomField>
    <fullName>chassis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chassis</label>
    <referenceTo>Chassis__c</referenceTo>
    <relationshipLabel>Nodes</relationshipLabel>
    <relationshipName>Nodes</relationshipName>
    <type>Lookup</type>
</CustomField>