force-app/main/default/objects/Node__c/fields/cluster__c.field-meta.xml
<CustomField>
    <fullName>cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Nodes</relationshipLabel>
    <relationshipName>Nodes</relationshipName>
    <type>Lookup</type>
</CustomField>