force-app/main/default/objects/Node__c/fields/cpu_model__c.field-meta.xml
<CustomField>
    <fullName>cpu_model__c</fullName>
    <label>CPU Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>