force-app/main/default/objects/Node__c/fields/ipmi_mac_address__c.field-meta.xml
<CustomField>
    <fullName>ipmi_mac_address__c</fullName>
    <label>IPMI MAC Address</label>
    <length>17</length>
    <type>Text</type>
</CustomField>