force-app/main/default/objects/Node__c/fields/mac_address_0__c.field-meta.xml
<CustomField>
    <fullName>mac_address_0__c</fullName>
    <label>MAC Address 0</label>
    <length>17</length>
    <type>Text</type>
</CustomField>