force-app/main/default/objects/Node__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>This Field will be used for Product Registration for different products where there is no Asset. Not a required field</description>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>