force-app/main/default/objects/Node__c/fields/NFR__c.field-meta.xml
<CustomField>
    <fullName>NFR__c</fullName>
    <formula>cluster__r.NFR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NFR</label>
    <type>Checkbox</type>
</CustomField>