force-app/main/default/objects/Node__c/fields/Node_Designation__c.field-meta.xml
<CustomField>
    <fullName>Node_Designation__c</fullName>
    <description>Each node will have a unique Node Designation (A, B, C, D)</description>
    <label>Node Position (viewed from rear)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>