force-app/main/default/objects/Node__c/fields/tpm_present__c.field-meta.xml
<CustomField>
    <fullName>tpm_present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>trusted platform module (TPM)</description>
    <label>TPM</label>
    <type>Checkbox</type>
</CustomField>