force-app/main/default/objects/Node__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>manufactured_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>